--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,12 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### logs and temporary configurations ###
+/src/testAuto/logs
+/src/testAuto/cs677*com
+/src/main/resources/logs
+/src/testAuto/app.jar
+
 ### VS Code ###
 .vscode/
 
